Fix scrolling on small screens

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -50,3 +50,9 @@
     visibility: visible !important;
   }
 }
+
+@media only screen and (max-width: 700px) {
+  #app {
+    padding: 2rem;
+  }
+}
